@@ -312,6 +312,13 @@ generated by the build. For example::
 
     $ ./configure --enable-Werror
 
+If you're building with GCC, then, for improved warnings, install ``sparse``
+(see "Prerequisites") and enable it for the build by adding
+``--enable-sparse``.  Use this with ``--enable-Werror`` to avoid missing both
+compiler and ``sparse`` warnings, e.g.::
+
+    $ ./configure --enable-Werror --enable-sparse
+
 To build with gcov code coverage support, add ``--enable-coverage``::
 
     $ ./configure --enable-coverage
@@ -354,9 +361,6 @@ Building
 
        $ make -C _gcc
        $ make -C _clang
-
-   For improved warnings if you installed ``sparse`` (see "Prerequisites"), add
-   ``C=1`` to the command line.
 
    .. note::
      Some versions of Clang and ccache are not completely compatible. If you
